samples/_failures_safe/1761640726_d0eaf6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7305c6ae.c:156: error: expected ‘;’, ‘,’ or ‘)’ at end of input
